--- a/css/login.css
+++ b/css/login.css
@@ -131,7 +131,7 @@ body {
     text-align: center;
   }
   
-  /* Style the image inside the centered container, if needed */
+  
   .centered img {
     width: 150px;
     border-radius: 50%;
@@ -139,4 +139,11 @@ body {
   h1{
       color:#ff6600;
       font-size: 50px;
+  }
+  .center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 10px;
+    
   }
