linked login page and dashboard

--- a/css/login.css
+++ b/css/login.css
@@ -26,7 +26,7 @@
   box-sizing: border-box;
   font-size: 14px;
 }
-.form button {
+.form button  {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
@@ -39,6 +39,14 @@
   -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
+}
+a{
+  color: #FFFFFF;
+  font-size: 14px;
+  -webkit-transition: all 0.3 ease;
+  transition: all 0.3 ease;
+  cursor: pointer;
+      
 }
 .form button:hover,.form button:active,.form button:focus {
   background: #ff6600;
